--- a/pages/home.html
+++ b/pages/home.html
@@ -509,10 +509,9 @@
 
       <footer class="footer">
         <div class="container-medium">
-        <div class="container-footer">
           <div class="footer__widgets">
             <div class="widget">
-              <div class="widget__body">
+              <div class="widget__info">
                 <h3>HOURS & LOCAtION</h3>
                 <p>
                   <strong>
@@ -528,7 +527,7 @@
             </div>
 
             <div class="widget">
-              <div class="widget__body">
+              <div class="widget__info">
                 <h3>JUDY’S REcENT POSTS</h3>
                 <ul>
                   <li><a href="#">Native trees and shrubs for Bluebirds</a></li>
@@ -543,7 +542,7 @@
             </div>
 
             <div class="widget">
-              <div class="widget__body">
+              <div class="widget__info">
                 <h3>MENu</h3>
                 <ul>
                   <li><a href="#">Home</a></li>
@@ -556,25 +555,25 @@
             </div>
 
             <div class="widget">
-              <div class="widget__body widget__body--right">
+              <div class="widget__info widget__info--right">
                 <h3>COnTACT</h3>
                 <div class="telephone">
                   <a href="tel:817-596-0003">817-596-0003</a>
                 </div>
                 <p><strong>info@stuartnursery.com</strong></p>
 
-                <div class="widget__socials">
-                  <div class="widget__socials-ithem">
+                <div class="widget__social-networks">
+                  <div class="widget__social-networks__ithem">
                     <a href="#"
                       ><img src="../images/icons/logo-facebook.svg" alt=""
                     /></a>
                   </div>
-                  <div class="widget__socials-ithem">
+                  <div class="widget__social-networks__ithem">
                     <a href="#"
                       ><img src="../images/icons/logo-telegram.svg" alt=""
                     /></a>
                   </div>
-                  <div class="widget__socials-ithem">
+                  <div class="widget__social-networks__ithem">
                     <a href="#"
                       ><img src="../images/icons/logo-instagram.svg" alt=""
                     /></a>
@@ -587,16 +586,15 @@
         </div>
         <div class="footer__copyright">
           <div class="container-medium">
-            <div class="footer__row">
-              <div class="footer__text">
+            <div class="footer__copyright__row">
+              <div class="footer__copyright__text">
                 Copyright © 2020 <a href="#">Stuart Nursery</a>
               </div>
-              <div class="footer__terms">
+              <div class="footer__copyright__terms">
                 <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a> |
                 <a href="#">Site Map</a>
               </div>
             </div>
-          </div>
         </div>
       
       </footer>
