--- a/pages/home.html
+++ b/pages/home.html
@@ -141,85 +141,65 @@
           <div class="services__gallery">
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_1.jpg" alt="" />
+                <img src="../images/services/photo_1.jpg" class="item__img" alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">Tree Sales</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag">Tree Sales</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_2.jpg" alt="" />
+                <img src="../images/services/photo_2.jpg" class="item__img" alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">Flowers</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag">Flowers</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_3.jpg" alt="" />
+                <img src="../images/services/photo_3.jpg" class="item__img"  alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">Shrubs</span>
-                  <ion-icon
-                    class="services__gallery___icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
-                </div>
-              </figure>
-            </div>
-            <div class="services__gallery__transform">
-              <figure class="services__gallerym__item">
-                <img src="../images/services/photo_4.jpg" alt="" />
-                <div class="services__gallery__content">
-                  <span class="services__gallery__tag"> Herbs</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag">Shrubs</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_5.jpg" alt="" />
+                <img src="../images/services/photo_4.jpg" class="item__img"alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">Fertilizer</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag"> Herbs</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_6.jpg" alt="" />
+                <img src="../images/services/photo_5.jpg" 
+                class="item__img" alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">Soil & Admendments</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag">Fertilizer</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/photo_7.jpg" alt="" />
+                <img src="../images/services/photo_6.jpg" class="item__img"  alt="" />
                 <div class="services__gallery__content">
-                  <span class="services__gallery__tag">And More</span>
-                  <ion-icon
-                    class="services__gallery__icon"
-                    name="arrow-forward-outline"
-                  ></ion-icon>
+                  <span class="content__tag">Soil & Admendments</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                </div>
+              </figure>
+            </div>
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
+                <img src="../images/services/photo_7.jpg" class="item__img" alt="" />
+                <div class="services__gallery__content">
+                  <span class="content__tag">And More</span>
+                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
