--- a/pages/home.html
+++ b/pages/home.html
@@ -140,64 +140,64 @@
 
           <div class="services__gallery">
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_1.jpg" class="item__img" alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">Tree Sales</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_2.jpg" class="item__img" alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">Flowers</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_3.jpg" class="item__img"  alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">Shrubs</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_4.jpg" class="item__img"alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag"> Herbs</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_5.jpg" 
                 class="item__img" alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">Fertilizer</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_6.jpg" class="item__img"  alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">Soil & Admendments</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__item">
+              <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_7.jpg" class="item__img" alt="" />
-                <div class="services__gallery__content">
+                <div class="services__gallery__transform__content">
                   <span class="content__tag">And More</span>
                   <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
                 </div>
