--- a/pages/home.html
+++ b/pages/home.html
@@ -22,20 +22,20 @@
    <header class="header">
       <div class="header__wrapper-top">
         <div class="header__wrapper-top__row">
-          <div class="row__adress">
+          <div class="header__wrapper-top__row__adress">
             2317 Fort Worth Hwy<br />
             Weatherford, Texas 76087
           </div>
-          <div class="row__logo">
+          <div class="header__wrapper-top__row__logo">
             <a href="#"> <img src="../images/logo.png" alt="" /></a>
             <p>WE SPECIALIZE IN TREE SALES & INSTAllaTION</p>
           </div>
-          <div class="row__work-time">
+          <div class="header__wrapper-top__row__work-time">
             <p>
               Open Monday-Saturday<br />
               9 AM – 5 PM
             </p>
-            <div class="telephone">
+            <div class="header__wrapper-top__row__work-time__telephone">
               <a href="tel:817-596-0003">817-596-0003</a>
             </div>
           </div>
@@ -47,7 +47,7 @@
               <ul class="header__main-list">
                 <li class="header__main-list__item">
                   <a href="#">
-                    <img src="../images/icons/home-outline.svg" alt="" />
+                    <img src="../images/icons/home-outline.png" alt="" />
                   </a>
                 </li>
                 <li class="header__main-list__item" id="menu">
@@ -93,15 +93,17 @@
           <div class="hero__text-box">
             <h1 class="hero__text-box__primary">Quality Trees, Shrubs and More</h1>
             <span class="hero__text-box__tag-title">Family Owned Since 1945</span>
-            <p class="hero__text-box__description">
-              Stuart Nursery provides quality tree sales and installation
+            <div class="hero__text-box__description">
+            <p class="hero__text-box__description__paragraph">
+              <span>Stuart Nursery</span> provides quality tree sales and installation
               services to Parker and surrounding counties. We specialize in
               Texas native plants for your residence, office or ranch.
             </p>
-            <p class="hero__text-box__description">
+            <p class="hero__text-box__description__paragraph">
               Stop by and see our tremendous selection of native and traditional
               plants or consult with one of our landscape experts.
             </p>
+          </div>
             <button class="hero__text-box__btn btn">
               <a href="#">Request a Quote</a>
             </button>
@@ -116,9 +118,9 @@
         </div>
       </section>
 
-      <section class="section-mark-quality">
+      <section class="mark-quality">
         <div class="mark-quality__container">
-          <div class="mark-quality__logos">
+          <div class="mark-quality__container__logos">
             <img src="../images/mark-quality.png" alt="quality logo" />
             <img src="../images/mark-quality.png" alt="quality logo" />
             <img src="../images/mark-quality.png" alt="quality logo" />
@@ -138,73 +140,75 @@
             </p>
           </div>
 
-          <div class="services__gallery">
+          <div class="services__gallery container-medium">
+            
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_1.jpg" class="item__img" alt="" />
+                <img src="../images/services/photo_1.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">Tree Sales</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_2.jpg" class="item__img" alt="" />
+                <img src="../images/services/photo_2.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">Flowers</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_3.jpg" class="item__img"  alt="" />
+                <img src="../images/services/photo_3.jpg"   alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">Shrubs</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_4.jpg" class="item__img"alt="" />
+                <img src="../images/services/photo_4.jpg" alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag"> Herbs</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_5.jpg" 
-                class="item__img" alt="" />
+               alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">Fertilizer</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_6.jpg" class="item__img"  alt="" />
+                <img src="../images/services/photo_6.jpg"   alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">Soil & Admendments</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__transform__item">
-                <img src="../images/services/photo_7.jpg" class="item__img" alt="" />
+                <img src="../images/services/photo_7.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
                   <span class="content__tag">And More</span>
-                  <img src="../images/icons/white-button.svg" class="content__images" alt="Nature" />
+                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
                 </div>
               </figure>
             </div>
+            </div>
+
           </div>
-        </div>
       </section>
 
       <section class="section-video">
@@ -234,7 +238,8 @@
 
       <section class="favorites">
         <div class="container-medium">
-          <h2>Some of Our Tree Favorites</h2>
+          <div class="favorites__h">
+          <h2>Some of Our Tree Favorites</h2></div>
           <div class="favorites__box">
             <div class="slides favorites__slideshow">
               <div class="tree" id="tree_1">
@@ -275,9 +280,9 @@
                       <p>Price:</p>
                       <p>320$</p>
                     </div>
-                    <div class="tree__btn btn">
+                    <button class="tree__btn btn">
                       <a href="#">learn more</a>
-                    </div>
+                    </button>
                   </div>
                   <div class="tree__img">
                     <img src="../images/slideshow/slideshow_2.png" alt="" />
@@ -477,7 +482,7 @@
           <form>
             <div class="forms__row">
               <input type="email" placeholder="Enter Your Email" required />
-              <div class="forms__btn btn">
+              <div class="forms__btn">
                 <button>join the list</button>
               </div>
             </div>
