--- a/pages/home.html
+++ b/pages/home.html
@@ -392,50 +392,63 @@
       </section>
 
       <section class="reviews">
-        <div class="container-min">
-          <div class="reviews__body">
+        <!--<div class="container-min">-->
+          <div class="reviews__body ">
+
             <div class="response">
-              <div class="response__body">
-                <div class="response__head">
-                  <div class="response__img">
+              <div class="response__hero ">
+                <div class="response__hero__head">
+                  <div class="response__hero__head__img">
                     <img
                       src="../images/reviews/outline-user.svg"
                       alt="Dr. Cameron Brown"
                     />
                   </div>
 
-                  <div class="response__name">
+                  <div class="response__hero__head__name">
                     <h3>Dr. Cameron Brown</h3>
-                    <div class="testimonial__stars">★★★★★</div>
+                    <div class="response__hero__head__name__stars">
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                    </div>
+                      <!--<p>★</p>
+                      <p>★</p>
+                      <p>★</p>
+                      <p>★</p>
+                      <p>★</p>
+                    </div>-->
                   </div>
                 </div>
-                <div class="response__text">
-                  Heather was so helpful and answered all of my questions. She
-                  is so professional and gave me the best customer service I
-                  have ever received at a retail nursery. She immediately
-                  greeted me upon my arrival and made me feel welcome without
-                  being pushy. She seems to really love her job and this
-                  positively impacts her customers.
+                <div class="response__hero__text">
+                  Heather was so helpful and answered all of my questions. She is so professional and gave me the best customer service I have ever received at a retail nursery. She immediately greeted me upon my arrival and made me feel welcome without being pushy. She seems to really love her job and this positively impacts her customers.
                 </div>
-              </div>
+            </div>
             </div>
 
-            <div class="response">
-              <div class="response__body">
-                <div class="response__head">
-                  <div class="response__img">
+            <div class="response ">
+              <div class="response__hero ">
+                <div class="response__hero__head">
+                  <div class="response__hero__head__img">
                     <img
                       src="../images/reviews/user-1.jpg"
                       alt="Ms. Williams  Alicia"
                     />
                   </div>
 
-                  <div class="response__name">
+                  <div class="response__hero__head__name">
                     <h3>Ms. Williams  Alicia</h3>
-                    <div class="response__stars">★★★★★</div>
+                    <div class="response__hero__head__name__stars">
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" /></div>
                   </div>
                 </div>
-                <div class="response__text">
+                <div class="response__hero__text">
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
@@ -445,22 +458,26 @@
               </div>
             </div>
 
-            <div class="response">
-              <div class="response__body">
-                <div class="response__head">
-                  <div class="response__img">
+            <div class="response ">
+              <div class="response__hero ">
+                <div class="response__hero__head">
+                  <div class="response__hero__head__img">
                     <img
                       src="../images/reviews/user-2.jpg"
                       alt="Mr. Alex Anderson"
                     />
                   </div>
-
-                  <div class="response__name">
+                  <div class="response__hero__head__name">
                     <h3>Mr. Alex Anderson</h3>
-                    <div class="response__stars">★★★★★</div>
+                    <div class="response__hero__head__name__stars">
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" />
+                      <img src="../images/icons/star.png"  alt="Nature" /></div>
                   </div>
                 </div>
-                <div class="response__text">
+                <div class="response__hero__text">
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
@@ -468,8 +485,9 @@
                 </div>
               </div>
             </div>
+
           </div>
-        </div>
+        <!--</div>-->
       </section>
 
       <section class="forms">
