--- a/pages/home.html
+++ b/pages/home.html
@@ -242,7 +242,7 @@
           <h2>Some of Our Tree Favorites</h2></div>
           <div class="favorites__box">
             <div class="slides favorites__slideshow">
-              <div class="tree" id="tree_1">
+              <div class="tree" ">
                 <div class="tree__primary">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
@@ -515,12 +515,10 @@
           <div class="footer__widgets">
             <div class="widget">
               <div class="widget__info">
-                <h3>HOURS & LOCAtION</h3>
+                <h3>HOURS & LOCATION</h3>
                 <p>
-                  <strong>
                     2317 Fort Worth Hwy<br />
                     Weatherford, Texas 76087
-                  </strong>
                 </p>
                 <p>
                   Mon-Sat: 9 AM – 5 PM<br />
@@ -531,7 +529,7 @@
 
             <div class="widget">
               <div class="widget__info">
-                <h3>JUDY’S REcENT POSTS</h3>
+                <h3>JUDY’S RECENT POSTS</h3>
                 <ul>
                   <li><a href="#">Native trees and shrubs for Bluebirds</a></li>
                   <li><a href="#">Fun with Tillandsias, or air plants</a></li>
@@ -546,7 +544,7 @@
 
             <div class="widget">
               <div class="widget__info">
-                <h3>MENu</h3>
+                <h3>MENU</h3>
                 <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Judy’s Journal</a></li>
@@ -559,11 +557,11 @@
 
             <div class="widget">
               <div class="widget__info widget__info--right">
-                <h3>COnTACT</h3>
-                <div class="telephone">
+                <h3>CONTACT</h3>
+                <div class="widget__info__telephone">
                   <a href="tel:817-596-0003">817-596-0003</a>
                 </div>
-                <p><strong>info@stuartnursery.com</strong></p>
+                <p>info@stuartnursery.com</p>
 
                 <div class="widget__social-networks">
                   <div class="widget__social-networks__ithem">
