--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="../styles/main.min.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -146,8 +145,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_1.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">Tree Sales</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag">Tree Sales</span>
+                  <img src="../images/icons/white-button.png" alt="Nature" />
                 </div>
               </figure>
             </div>
@@ -155,8 +154,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_2.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">Flowers</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag">Flowers</span>
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
@@ -164,8 +163,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_3.jpg"   alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">Shrubs</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag">Shrubs</span>
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
@@ -173,8 +172,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_4.jpg" alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag"> Herbs</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag"> Herbs</span>
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
@@ -183,7 +182,7 @@
                 <img src="../images/services/photo_5.jpg" 
                alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">Fertilizer</span>
+                  <span class="services__gallery__transform__content__tag">Fertilizer</span>
                   <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
@@ -192,8 +191,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_6.jpg"   alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">Soil & Admendments</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag">Soil & Admendments</span>
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
@@ -201,8 +200,8 @@
               <figure class="services__gallery__transform__item">
                 <img src="../images/services/photo_7.jpg"  alt="" />
                 <div class="services__gallery__transform__content">
-                  <span class="content__tag">And More</span>
-                  <img src="../images/icons/white-button.png" class="content__images" alt="Nature" />
+                  <span class="services__gallery__transform__content__tag">And More</span>
+                  <img src="../images/icons/white-button.png"  alt="Nature" />
                 </div>
               </figure>
             </div>
