--- a/pages/home.html
+++ b/pages/home.html
@@ -241,7 +241,7 @@
           <h2>Some of Our Tree Favorites</h2></div>
           <div class="favorites__box">
             <div class="slides favorites__slideshow">
-              <div class="tree" ">
+              <div class="tree">
                 <div class="tree__primary">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
