--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="../styles/main.min.css" />
+    <link rel="stylesheet" href="../styles/queries.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -79,6 +80,12 @@
                 </li>
               </ul>
             </nav>
+            <button class="btn-mobile-nav">
+
+              <img src="../images/close-outline.svg" name="close-outline"  alt="close-outline" />
+              <img src="../images/menu-outline.svg" name="menu-outline"  alt="menu-outline" />
+
+            </button>
             <button class="btn ">
               <a href="#">Request a Quote</a>
             </button>
