--- a/pages/home.html
+++ b/pages/home.html
@@ -23,8 +23,10 @@
       <div class="header__wrapper-top">
         <div class="header__wrapper-top__row">
           <div class="header__wrapper-top__row__adress">
+            <p>
             2317 Fort Worth Hwy<br />
             Weatherford, Texas 76087
+          </p>
           </div>
           <div class="header__wrapper-top__row__logo">
             <a href="#"> <img src="../images/logo.png" alt="Logo" /></a>
@@ -149,68 +151,68 @@
           <div class="services__gallery container-medium">
             
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_1.jpg"  alt="Tree Sales" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Tree Sales</span>
                   <img src="../images/icons/white-button.png" alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_2.jpg"  alt="Flowers" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Flowers</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_3.jpg"   alt="Shrubs" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Shrubs</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_4.jpg" alt="Herbs" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag"> Herbs</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_5.jpg" 
                alt="Fertilizer" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Fertilizer</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_6.jpg"   alt="Soil & Admendments" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Soil & Admendments</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             <div class="services__gallery__transform">
-              <figure class="services__gallery__transform__item">
+              <div class="services__gallery__transform__item">
                 <img src="../images/services/photo_7.jpg"  alt="And More Nature" />
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">And More</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
                 </div>
-              </figure>
+              </div>
             </div>
             </div>
 
@@ -543,7 +545,8 @@
 
             <div class="widget">
               <div class="widget__info">
-                <h3>MENU</h3>
+                <ul>
+                <li><a href="#">MENU</a></li>
                 <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Judy’s Journal</a></li>
@@ -551,6 +554,7 @@
                   <li><a href="#">Get Financing</a></li>
                   <li><a href="#">Contact Us</a></li>
                 </ul>
+              </ul>
               </div>
             </div>
 
@@ -560,7 +564,7 @@
                 <div class="widget__info__telephone">
                   <a href="tel:817-596-0003">817-596-0003</a>
                 </div>
-                <p>info@stuartnursery.com</p>
+                <a href="mailto:info@stuartnursery.com">info@stuartnursery.com</a>
 
                 <div class="widget__social-networks">
                   <div class="widget__social-networks__ithem">
