--- a/pages/home.html
+++ b/pages/home.html
@@ -237,8 +237,19 @@
             </button>
           </div>
           <div class="video__img-box">
+             <!--//DOBAVYTY POPUP-->
+             <a href="javascript:PopUpShow()">
             <img src="../images/video.png" class="video__img-box__video-img" alt="Nature" />
+            </a>
             <img src="../images/button.png" class="video__img-box__button-img" alt="White button" />
+          </div>
+          <div class="popup">
+            <div class="popup__body">
+              <div class="popup__youtube">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bd-IHeDxaIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <a href="javascript:PopUpHide()">CLOSE</a>
+              </div>
+            </div>
           </div>
     </div>
         </div>
@@ -530,6 +541,7 @@
 
             <div class="widget">
               <div class="widget__info">
+                <ul>
                 <h3>JUDY’S RECENT POSTS</h3>
                 <ul>
                   <li><a href="#">Native trees and shrubs for Bluebirds</a></li>
@@ -540,13 +552,14 @@
                     <a href="#">Urban sprawl and deer-resistant plants</a>
                   </li>
                 </ul>
+              </ul>
               </div>
             </div>
 
             <div class="widget">
               <div class="widget__info">
                 <ul>
-                <li><a href="#">MENU</a></li>
+                <h3>MENU</h3>
                 <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Judy’s Journal</a></li>
