--- a/pages/home.html
+++ b/pages/home.html
@@ -139,7 +139,7 @@
       <section class="section-services">
         <div class="services">
           <div class="services__text-box container-medium">
-            <h1 class="services__text-box__first">Our Services<br/></h1>
+            <h2 class="services__text-box__first">Our Services<br/></h2>
             <p class="services__text-box__second">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -149,6 +149,98 @@
           </div>
 
           <div class="services__gallery container-medium">
+
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_1.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Tree Sales</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_2.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Flowers</a>
+                  </div>
+                </div>
+              </div>
+              <!--card-end-->
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_3.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Shrubs</a>
+                  </div>
+                </div>
+              </div>
+              <!--card-end-->
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_4.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Herbs</a>
+                  </div>
+                </div>
+              </div>
+              <!--card-end-->
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_5.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Fertilizer</a>
+                  </div>
+                </div>
+              </div>
+              <!--card-end-->
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_6.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">Soil & Admendments</a>
+                  </div>
+                </div>
+              </div>
+              <!--card-end-->
+              <div class="card">
+                <div class="card__item">
+                  <div class="card__img">
+                    <a href="#">
+                      <img src="../images/services/photo_7.jpg" alt="" />
+                    </a>
+                  </div>
+                  <div class="card__content">
+                    <a href="#">And More</a>
+                  </div>
+                </div>
+              </div>
+              <!--
             
             <div class="services__gallery__transform">
               <div class="services__gallery__transform__item">
@@ -170,7 +262,8 @@
             </div>
             <div class="services__gallery__transform">
               <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_3.jpg"   alt="Shrubs" />
+                <div class="item__container">
+                <img src="../images/services/photo_3.jpg"   alt="Shrubs" /></div>
                 <div class="services__gallery__transform__content">
                   <span class="services__gallery__transform__content__tag">Shrubs</span>
                   <img src="../images/icons/white-button.png"  alt="white-button" />
@@ -215,6 +308,7 @@
               </div>
             </div>
             </div>
+            -->
 
           </div>
       </section>
@@ -223,7 +317,7 @@
         <div class="container-medium">
         <div class="video">
           <div class="video__text-box">
-            <h1 class="video__text-box__primary">Stuart Nursery Tree Farm</h1>
+            <h2 class="video__text-box__primary">Stuart Nursery Tree Farm</h2>
             <div class="video__text-box__paragraph">
             <p class="video__text-box__paragraph__description">
               <span class="years"> Over 75 years</span>, Stuart Nursery has been growing trees and shrubs in our own nurseries, so that we can provide a consistent supply of quality plants to our customers.
